turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: type mismatch;
 found   : Int
 required: java.awt.Color
	setCouleurSol(pos+1)
                         ^LangtonsAnt:17: error: type mismatch;
 found   : Int
 required: java.awt.Color
	setCouleurSol(pos+1)
                         ^