turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {

var pos:Int = 0

for (i <- 0 to colors.length-1) {
	if (getCouleurSol() == colors(i)) { //Trouver la position de la couleur du sol dans la séquence de couleur
		pos = i
	}
}

if (rule(pos) == 'R') {
	setCouleurSol(pos+1)
	droite()
	avance()
} else {
	setCouleurSol(pos+1)
	gauche()
	avance()
}

}
	
/*		if (getCouleurSol() == colors(i)) {
			if (rule(i) == 'R') {
				setCouleurSol(colors(i))
				droite()
				avance()
			} else {
				setCouleurSol(colors(i))
				gauche()
				avance()
			}
		}
*/	


def setCouleurSol(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}
